fix(balance) : fixed gap in label for graph

--- a/src/components/Widgets/WidgetGrafBalance/WidgetGrafBalance.module.css
+++ b/src/components/Widgets/WidgetGrafBalance/WidgetGrafBalance.module.css
@@ -16,4 +16,5 @@
     size: 20px;
     font-family: var(--fPrimary);
     font-weight: var(--bRegular);
+    margin-bottom: 8px;
   }
